--- a/_posts/2023_05_20_Lesson 5.md
+++ b/_posts/2023_05_20_Lesson 5.md
@@ -10,5 +10,5 @@ Data preparation is a new concept to me. But it makes sense. To be able to fit a
 -- This will often occur with parameters that grow exponentially such as population 
 - Set all data values to be floats
 
-After preparing the data, a linear model was then set-up and trained. The details of which I will not get into but very cool to see the process! Also, the take-away message ended up being that you shouldn't tart from scratch except for learning before Jeremy goes on to show how quickly and easily fastai can do the things we just spent over an hour manually doing. Great for appreciating the magic of AI!
+After preparing the data, a linear model was then set-up and trained. The details of which I will not get into but very cool to see the process! Also, the take-away message ended up being that you shouldn't start from scratch except for learning before Jeremy goes on to show how quickly and easily fastai can do the things we just spent over an hour manually doing. Great for appreciating the magic of AI!
 ![magic wand](https://dictionaryblog.cambridge.org/wp-content/uploads/2017/11/magic-wand.jpg)
