--- a/_posts/2023_05_20_Lesson 5.md
+++ b/_posts/2023_05_20_Lesson 5.md
@@ -1,14 +1,15 @@
 # Lesson 5
-I really enjoyed this lesson and being stepped through how to __create a neural network from scratch__! We worked with the same problem presented in Lesson 3, which was predicting the survival of Titanic passengers based on parameters such as sex and fare price. 
+I really enjoyed lesson 5 and being stepped through how to __create a neural network from scratch__! Jeremy presented the same problem as in Lesson 3, which was predicting the survival of Titanic passengers based on parameters such as sex and fare price. 
 
 ![titatnic](https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/RMS_Titanic_3.jpg/300px-RMS_Titanic_3.jpg)
 
-Data preparation is a new concept to me. But it makes sense. To be able to fit a model to a dataset, the data has to be in a form that can be worked with. Techniques include:
-- Use mode values to fill missing values 
-- Using dummy variables to convert categories to numbers (e.g. male and female represented as 0 and 1)
+Data preparation is a new concept to me. But it makes complete sense as to be able to fit a model to a dataset, the data must be in a form that the model can work with. Data preparation techniques include:
+- Using mode values to replace missing values 
+- Using dummy variables to convert categorical parameters to numbers (e.g. male and female represented as 0 and 1)
 - Taking the log of a parameter to convert a long-tailed distribution to something models can more easily work with
 -- This will often occur with parameters that grow exponentially such as population 
-- Set all data values to be floats
+- Setting all data values to be floats
 
-After preparing the data, a linear model was then set-up and trained. The details of which I will not get into but very cool to see the process! Also, the take-away message ended up being that you shouldn't start from scratch except for learning before Jeremy goes on to show how quickly and easily fastai can do the things we just spent over an hour manually doing. Great for appreciating the magic of AI!
+After preparing the given titanic data, a linear model was then set-up and trained. The details of which I will not get into, but it was extremely cool to see the whole process! Also, the take-away message of the lesson was that you shouldn't start from scratch except for learning purposes. Jeremy proved this point by demonstrating how quickly and easily fastai was able to create a model similar to what we just spent over an hour manually implementing. This definitely improved my appreciation for the magic of AI!
+
 ![magic wand](https://dictionaryblog.cambridge.org/wp-content/uploads/2017/11/magic-wand.jpg)
