--- a/_posts/2023_05_20_Lesson 5.md
+++ b/_posts/2023_05_20_Lesson 5.md
@@ -7,7 +7,7 @@ Data preparation is a new concept to me. But it makes complete sense as to be ab
 - Using mode values to replace missing values 
 - Using dummy variables to convert categorical parameters to numbers (e.g. male and female represented as 0 and 1)
 - Taking the log of a parameter to convert a long-tailed distribution to something models can more easily work with
--- This will often occur with parameters that grow exponentially such as population 
+  - This will often occur with parameters that grow exponentially such as population 
 - Setting all data values to be floats
 
 After preparing the given titanic data, a linear model was then set-up and trained. The details of which I will not get into, but it was extremely cool to see the whole process! Also, the take-away message of the lesson was that you shouldn't start from scratch except for learning purposes. Jeremy proved this point by demonstrating how quickly and easily fastai was able to create a model similar to what we just spent over an hour manually implementing. This definitely improved my appreciation for the magic of AI!
